<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <include layout="@layout/actionbar_app" android:id="@+id/action_barRegister" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/action_barRegister"
        android:padding="10dp">



        <TextView
            android:id="@+id/txtinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_newAccount"
            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"
            android:layout_marginStart="4dp"
            android:textSize="20dp"

            />


        <EditText
            android:id="@+id/txtusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"

            />

        <EditText
            android:id="@+id/txtemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:layout_marginTop="10dp"


            />

        <EditText
            android:id="@+id/txtpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/parola"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"

            />
        <Button
            android:id="@+id/btnregister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createaccount"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btnloginregister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginwithyouraccount"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"/>

    </LinearLayout>


</RelativeLayout>