<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginActivity">

    <include layout="@layout/actionbar_app" android:id="@+id/actionBarLogin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/actionBarLogin"
        android:padding="10dp">

    <TextView
        android:id="@+id/txtinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginwithyouraccount"
        android:textColor="@android:color/black"
         android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:textSize="20dp"

        />

    <EditText
        android:id="@+id/txtemaillogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/email"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/txtpasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/parola"
        android:layout_marginTop="10dp"
        />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gir"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btnRegisterLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_newAccount"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"/>

    </LinearLayout>
</RelativeLayout>