<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimary"
    android:padding="20dp"><!-- tamamına sağ sol 20dp yer ayırdı-->

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/chat"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtAppName"

        />
    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50dp"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"


        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorButton"
        android:text="@string/create_newAccount"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:textColor="@android:color/darker_gray"
        android:id="@+id/buttonWelcomeRegister"
        />
    <Button
        android:layout_above="@+id/buttonWelcomeRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alreadyHave"
        android:background="@color/colorButton"
        android:textColor="@android:color/darker_gray"
        android:layout_marginBottom="25dp"
        android:id="@+id/buttonWelcomeLogin"

        />


</RelativeLayout>